Text changes to first slide.

--- a/reports/presentation_slides.qmd
+++ b/reports/presentation_slides.qmd
@@ -9,9 +9,9 @@ author: Andrea Leitereg & Kevin Reuss
 
 ## Purpose
 
--   Facilitate easy collaboration
+-   Simplify collaboration
 
--   Version control
+-   Ensure version control
 
 -   Document changes to code (or other project materials!)
 
