--- a/reports/presentation_slides.qmd
+++ b/reports/presentation_slides.qmd
@@ -7,20 +7,27 @@ author: Andrea Leitereg & Kevin Reuss
 
 # What is Git?
 
-## Purpose
+## 
 
-**Efficiency:** Simplify collaboration
+![](git-logo.png){fig-align="center"}
 
+Git is a [**distributed version control system**]{.ul} that tracks versions of files. It is often used to control source code by programmers who are developing software collaboratively.
 
-**Reproducibility:** Ensure version control
+## Distributed version control
 
-
-**Transparency:** Document changes to code (or other project materials!)
-
+![](distributed-version-control-diagram.png)
 
 ## Why is version control important? {.center}
 
 ![](tech-comics-version-control.png){fig-align="center"}
+
+## Benefits of Git
+
+Simplify collaboration
+
+Ensure version control
+
+Document changes to code (or other project materials!)
 
 ## How Git works
 
